--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Test Pages</title>
+</head>
+<body>
+    <h1>Welcome to the Test Pages</h1>
+    <ul>
+        <li><a href="page1.html">Go to Page 1</a></li>
+        <li><a href="page2.html">Go to Page 2</a></li>
+    </ul>
+</body>
+</html>
