--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Welcome to the Test Pages</h1>
     <ul>
         <li><a href="page1.html">Go to Page 1</a></li>
-        <li><a href="page2.html">Go to Page 2</a></li>
+        <li><a href="TestFolder1/page2.html">Go to Page 2</a></li>
     </ul>
 </body>
 </html>
