--- a/TestFolder1/page3.html
+++ b/TestFolder1/page3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page 3/title>
+    <title>Page 3</title>
 </head>
 <body>
     <h1>This is Page 3</h1>
