--- a/TestFolder1/page3.html
+++ b/TestFolder1/page3.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page 3</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>This is Page 3</h1>
@@ -22,21 +23,26 @@
     </ol>
     <dl>
         <dt>Coffee</dt>
-        <dd>- black hot drink</dd>
-         <dt>Milk</dt>
-        <dd>- white cold drink</dd>
+        <dd>Black hot drink</dd>
+        <dt>Milk</dt>
+        <dd>White cold drink</dd>
     </dl>
+
     <form>
         <label for="name">Name:</label>
-        <input type="text" id="name" name = "name"><br><br>
-    </form>
-    <form>
-        <input type="radio" id="sad" name="sad" value="sad">
+        <input type="text" id="name" name="name"><br><br>
+
+        <!-- Radios grouped by the same name so only one can be selected -->
+        <input type="radio" id="sad" name="mood" value="sad">
         <label for="sad">Sad</label><br>
-        <input type ="radio" id="nuteral" name="nuteral" value="nuteral">
-        <label for="nuteral">nuteral</label>
-        <input type="radio" id="happy" name ="happy" value="happy">
-        <label for="happy">happy</label><br>
+
+        <input type="radio" id="neutral" name="mood" value="neutral">
+        <label for="neutral">Neutral</label><br>
+
+        <input type="radio" id="happy" name="mood" value="happy">
+        <label for="happy">Happy</label><br><br>
+
+        <button type="submit">Submit</button>
     </form>
 </body>
 </html>
